# ubix

./: CLAUDE.md  Cargo.toml  README.md  build.rs  justfile
.github/workflows/: release.yml
docs/: KNOWN_LIMITATIONS.md  PRD.md  aqua-plan.md
src/: archive.rs  bootstrap.rs  checksum.rs  cli.rs  config.rs  engine.rs  http.rs  main.rs  outdated.rs  paths.rs  platform.rs  prefix_dev.rs  progress.rs  remove.rs  runner.rs  state.rs
src/aqua/: hint.rs  mod.rs  prune.rs  registry.rs  resolve.rs  schema.rs  synth.rs  template.rs
src/sources/: cargo.rs  github.rs  gitlab.rs  go.rs  http.rs  mod.rs  npm.rs  pixi.rs  template.rs  url.rs  uv.rs
