[package]
name = "ubix"
version = "0.1.0"
edition = "2021"
description = "Declarative binary/CLI tool installer & tracker (ubi + multi-source)"
license = "MIT"

[[bin]]
name = "ubix"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
clap = { version = "4", features = ["derive"] }
directories = "5"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
ubi = { version = "0.9", default-features = false, features = ["rustls-tls"] }
# ubi's install_binary is async; we drive it with a minimal current-thread runtime.
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
