[package]
name = "ubix"
version = "0.1.0"
edition = "2021"
description = "Declarative binary/CLI tool installer & tracker (ubi + multi-source)"
license = "MIT"
repository = "https://github.com/timqi/ubix"

[[bin]]
name = "ubix"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"], default-features = false }
clap = { version = "4", features = ["derive"] }
directories = "5"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
ubi = { version = "0.9", default-features = false, features = ["rustls-tls"] }
# ubi's install_binary is async; we drive it with a minimal current-thread runtime.
tokio = { version = "1", features = ["rt", "macros"] }
# HTTP fetches (outdated queries, url source, go.dev/dl, checksums). Async client
# driven on the same current-thread runtime; rustls to match ubi's TLS backend.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Archive extraction for the `url` source and the go toolchain tarball.
flate2 = "1"
tar = "0.4"
xz2 = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Surface ubi's `log`-facade output; small, sync logger honoring RUST_LOG.
log = "0.4"
env_logger = { version = "0.11", default-features = false, features = ["humantime"] }
serde_yml = "0.0.13"

[dev-dependencies]
